[gd_scene load_steps=4 format=3 uid="uid://dr5q1fb5amb1p"]

[ext_resource type="Script" path="res://v1/Matches/Maps/FighterFigureDisplay.gd" id="1_mfid1"]
[ext_resource type="PackedScene" uid="uid://hoavyem0add4" path="res://v1/Matches/Fighters/FighterImageDisplay.tscn" id="2_v22go"]
[ext_resource type="Texture2D" uid="uid://lnxceqy07rdl" path="res://assets/node/border-big.png" id="3_ypaj1"]

[node name="FighterFigure" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1102.0
offset_bottom = -598.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_mfid1")
DefaultColor = Color(1, 1, 1, 0)
PickableColor = Color(1, 0, 0, 0.313726)
HoverColor = Color(0, 1, 0, 0.313726)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Image" parent="MarginContainer" instance=ExtResource("2_v22go")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[node name="Border" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_ypaj1")
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
